<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:src="@drawable/aa"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_nama"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_nama"
                android:textSize="12dp"
                android:textStyle="italic"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_nama"
                android:layout_marginBottom="10dp"
                android:text="@string/name_author"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_email"
                android:text="@string/lbl_email"
                android:layout_marginTop="10dp"
                android:textSize="12dp"
                android:textStyle="italic"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_email"
                android:layout_marginBottom="10dp"
                android:text="@string/email_author"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_telp"
                android:text="@string/lbl_telp"
                android:layout_marginTop="10dp"
                android:textSize="12dp"
                android:textStyle="italic"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_telp"
                android:text="@string/telp_author"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_alamat"
        android:layout_marginLeft="10dp"
        android:text="@string/lbl_alamat"
        android:layout_marginTop="20dp"
        android:textSize="12dp"
        android:textStyle="italic"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_alamat"
        android:layout_marginLeft="10dp"
        android:text="@string/alamat_author"/>


</LinearLayout>