<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/biodata"
            android:textSize="26sp"
            android:layout_marginVertical="26dp"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_user_person_dark"
            android:layout_gravity="center"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="16dp">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_nama"
                android:id="@+id/lbl_nama"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_nama"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="16dp">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_gender"
                android:id="@+id/lbl_gender"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_gender"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="16dp">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_umur"
                android:id="@+id/lbl_umur"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_umur"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="16dp">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_email"
                android:id="@+id/lbl_email"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_email"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="16dp">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_telp"
                android:id="@+id/lbl_telp"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_telp"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="16dp">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_alamat"
                android:id="@+id/lbl_alamat"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_alamat"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="26dp"
            android:layout_gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:id="@+id/btn_edit"
                android:layout_marginHorizontal="3dp"
                android:text="@string/btn_edit"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_dial"
                android:paddingHorizontal="10dp"
                android:layout_marginHorizontal="3dp"
                android:text="@string/btn_dial"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_about"
                android:paddingHorizontal="10dp"
                android:layout_marginHorizontal="3dp"
                android:text="@string/btn_about"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>